[1.15] red -> lightred because using multicolors include now.

--- a/translations/cruze_creditsforspecifiedevents.phrases.txt
+++ b/translations/cruze_creditsforspecifiedevents.phrases.txt
@@ -3,62 +3,62 @@
 	"Knife Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Knife{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Knife{default} kill."
 	}
 	"Backstab Knife Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Backstab Knife{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Backstab Knife{default} kill."
 	}
 	"Taser Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Zeus{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Zeus{default} kill."
 	}
 	"HeGrenade Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Grenade{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Grenade{default} kill."
 	}
 	"Flash Grenade Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Flash{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Flash{default} kill."
 	}
 	"Smoke Grenade Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Smoke{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Smoke{default} kill."
 	}
 	"Molotov Grenade Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Molotov/Incendiary{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Molotov/Incendiary{default} kill."
 	}
 	"Decoy Grenade Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Decoy{default} kill."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Decoy{default} kill."
 	}
 	"Headshot Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en"		"{1} You earned {green}{2}{default} credits for {red}Headshot{default}."
+		"en"		"{1} You earned {green}{2}{default} credits for {lightred}Headshot{default}."
 	}
 	"Assist Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en" 		"{1} You earned {green}{2}{default} credits for {red}Assist{default} on a kill."
+		"en" 		"{1} You earned {green}{2}{default} credits for {lightred}Assist{default} on a kill."
 	}
 	"MVP Kill"
 	{
 		"#format"	"{1:s},{2:i}"
-		"en" 		"{1} You earned {green}{2}{default} credits for {red}MVP{default} on a kill."
+		"en" 		"{1} You earned {green}{2}{default} credits for {lightred}MVP{default} on a kill."
 	}
 	"MVP Kill All"
 	{
-		"#format"	"{1:s},{2:s},{3:i}"
-		"en" 		"{1} {purple}{2}{default} earned {green}{3}{default} credits for being {red}MVP{default}."
+		"#format"	"{1:s},{2:N},{3:i}"
+		"en" 		"{1} {purple}{2}{default} earned {green}{3}{default} credits for being {lightred}MVP{default}."
 	}
 	"Plant Creds"
 	{
